增加插件控制台