@@ -4,11 +4,15 @@ import net.diyigemt.miraiboot.Main;
 import net.diyigemt.miraiboot.annotation.AutoInit;
 import net.diyigemt.miraiboot.annotation.EventHandlerComponent;
 import net.diyigemt.miraiboot.annotation.ExceptionHandlerComponent;
+import net.diyigemt.miraiboot.core.PluginMgr;
 import net.diyigemt.miraiboot.mirai.MiraiMain;
 import net.diyigemt.miraiboot.utils.FileUtil;
 
 import java.io.File;
+import java.io.IOException;
+import java.lang.reflect.Field;
 import java.lang.reflect.Method;
+import java.net.JarURLConnection;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.ArrayList;
@@ -25,13 +29,17 @@ import java.util.jar.Manifest;
  */
 public class PluginLoader {
 
-    private static int CurrentListSize = 0;
-
+    //通过检查的最终结果
     private static List<Class<?>> classes = new ArrayList<>();
+
+    //读取缓冲，等待检查
+    private static List<Class<?>> Plugin_Temp = new ArrayList<>();
 
     public static URLClassLoader loader;
 
     private static boolean flag = false;
+
+    private static boolean isUEFI  = true;
 
     public static List<Class<?>> getPluginClasses(){
         MiraiMain.logger.info("开始扫描插件");
@@ -41,11 +49,12 @@ public class PluginLoader {
             for(File file : plugins){
                 String fileName = file.getName();
                 if(fileName.endsWith(".jar")){
-                    MiraiMain.logger.info("正在加载： " + fileName);
-                    JarFile jar = new JarFile(file.getAbsolutePath());
-                    URL url = file.toURL();
+                    URL url = new URL("jar:file:/" + file.getAbsolutePath() + "!/");
+                    JarURLConnection connection = (JarURLConnection) url.openConnection();
+                    JarFile jar = connection.getJarFile();
                     loader = new URLClassLoader(new URL[]{url}, Thread.currentThread().getContextClassLoader());
-                    CurrentListSize = classes.size();
+                    Plugin_Temp.clear();//重新初始化
+                    Enumeration<JarEntry> files = jar.entries();
                     Manifest manifest = jar.getManifest();
                     String MainClass = manifest.getMainAttributes().getValue("Main-Class");
                     String PackName = MainClass.substring(0, MainClass.lastIndexOf(".")).replace(".", "/");//获取主方法所在的包路径
@@ -55,26 +64,38 @@ public class PluginLoader {
                     try{
                         onLoad = mainClass.getMethod("onLoad");
                     }catch (NoSuchMethodException e){
-                        MiraiMain.logger.error("插件: " + file.getName() + ": 为非法插件");
+                        MiraiMain.logger.error(file.getName() + ": 未知的MiraiBoot插件格式");
                         continue;
                     }
                     onLoad.invoke(mainClass.newInstance());
 
-                    Enumeration<JarEntry> files = jar.entries();
+                    Field UEFI = mainClass.getDeclaredField("UEFIMode");//获取UEFI设置
+                    UEFI.setAccessible(true);
+                    isUEFI = (boolean) UEFI.get(mainClass);
 
-                    QuickJarScanner(files, PackName);//UEFI（迫真）
-                    if(CurrentListSize == classes.size()){//扫了一圈啥也没有
-                        GlobalJarScanner(files);//LEGACY（传统）
+                    if(isUEFI){
+                        MiraiMain.logger.info("正在加载： " + fileName + "(UEFI)");
+                        QuickJarScanner(files, PackName);//UEFI（迫真）
+                        if(Plugin_Temp.size() == 0){//扫了一圈啥也没有
+                            GlobalJarScanner(files);//LEGACY（传统）
+                        }
+                    }else {
+                        MiraiMain.logger.info("正在加载： " + fileName);
+                        GlobalJarScanner(files);
                     }
 
                     if(flag){//加载过程中存在失败
+                        Plugin_Temp.clear();//因为存在依赖加载失败，为了程序稳定性，放弃扫描该插件的所有结果
+                        connection.getJarFile().close();
                         MiraiMain.logger.error("插件: " + file.getName() + ": 启动失败，缺少部分依赖");
-                        classes.clear();
-                        return classes;
+                        continue;
                     }
-                    if(CurrentListSize == classes.size()){//还是啥也没有
+                    if(Plugin_Temp.size() == 0){//还是啥也没有
+                        connection.getJarFile().close();
                         MiraiMain.logger.error("插件: " + file.getName() + ": 该插件中未找到任何有效的类，加载失败");
                     }else {
+                        classes.addAll(Plugin_Temp);
+                        PluginMgr.addPluginConnection(connection);
                         MiraiMain.logger.info("插件: " + file.getName() + "，加载成功");
                     }
                 }
@@ -84,6 +105,14 @@ public class PluginLoader {
         }
 
         return classes;
+    }
+
+
+    public static void LoadPluginDependencies(List<JarFile> dependencies){
+        for(JarFile file : dependencies){
+            Enumeration<JarEntry> files = file.entries();
+            GlobalJarScanner(files);
+        }
     }
 
     private static void QuickJarScanner(Enumeration<JarEntry> files, String PackName) {
@@ -122,7 +151,7 @@ public class PluginLoader {
                 || classFile.isAnnotationPresent(ExceptionHandlerComponent.class)
                 || classFile.isAnnotationPresent(AutoInit.class)){
 
-            classes.add(classFile);
+            Plugin_Temp.add(classFile);
         }
     }
 }
